# goxlr-ui

./: .gitignore  LICENSE  README.md  babel.config.js  index.html  package-lock.json  package.json  vite.config.js  vue.config.js
public/: index.html
src/: App.vue  main.js  store.js
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/icons/: icon.icns
src-tauri/src/: main.rs  mappings.rs  mixers.rs
src/components/: A11yNotifications.vue  ContentBox.vue  DriverWarning.vue  GoXLR.vue  Language.vue  VersionCheck.vue
src/components/big_buttons/: BigButton.vue
src/components/button_list/: Button.vue  ButtonList.vue  CheckSelection.vue  ListSelection.vue  Profile.vue  ProfileButton.vue  RadioItem.vue  RadioSelection.vue  SelectorList.vue
src/components/buttons/: BigButton.vue  Button.vue
src/components/containers/: CenteredContainer.vue  ContentContainer.vue  ExpandoGroupContainer.vue  GroupContainer.vue  VerticalScrollingContainer.vue  WidgetContainer.vue
src/components/design/: DropMenu.vue  ExpandoBox.vue  MainTabContent.vue  Modal.vue  ProgressBar.vue  SimpleNumberInput.vue
src/components/icons/: HelpIcon.vue  IconBase.vue  MicIcon.vue
src/components/lists/: ButtonItem.vue  CheckItem.vue  CheckSelection.vue  RadioItem.vue  RadioList.vue  RadioSelection.vue  ScrollingRadioList.vue
src/components/new/: ColourPicker.vue  Container01.vue  Container02.vue  Container03.vue  Container04.vue  LightingCough.vue  LightingEffects.vue  LightingEffectsEffects.vue  (+5 more)
src/lang/: config.js
src/util/: micMappings.js  mixerMapping.js  sockets.js  util.js  websocket.js
(+135 files in other folders)
