[package]
name = "goxlr-ui"
version = "0.1.0-alpha1"
description = "An application to control the GoXLR"
authors = ["Craig McLure <craig@mclure.net>", "Lars Mühlbauer <lm41@dismail.de>"]
license = "MIT"
repository = "https://github.com/GoXLR-on-Linux/goxlr-ui"
default-run = "goxlr-ui"
edition = "2021"
rust-version = "1.57"
build = "src/build.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
tauri-build = { version = "1.0.0-rc.9", features = [] }

[dependencies]
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
tauri = { version = "1.0.0-rc.11", features = ["api-all"] }
anyhow = "1.0"

goxlr-types = { git = "https://github.com/GoXLR-on-Linux/GoXLR-Utility.git", package="goxlr-types", rev="b249e066" }
goxlr-ipc = { git = "https://github.com/GoXLR-on-Linux/GoXLR-Utility.git", package="goxlr-ipc", rev="b249e066" }

tokio = { version = "1.0", features = ["net"] }
tokio-serde = { version = "0.8.0", features= ["json"] }
enumset = { version= "1.0.8", features = ["serde"] }

[features]
# by default Tauri runs in production mode
# when `tauri dev` runs it is executed with `cargo run --no-default-features` if `devPath` is an URL
default = [ "custom-protocol" ]
# this feature is used used for production builds where `devPath` points to the filesystem
# DO NOT remove this
custom-protocol = [ "tauri/custom-protocol" ]
